--- a/z7/index.html
+++ b/z7/index.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="jquery.formatter.min.js"></script>
+	<script src="js/jquery.formatter.min.js"></script>
 	<script src='https://www.google.com/recaptcha/api.js'></script>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 	
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Ubuntu+Condensed" rel="stylesheet"> 
 	<link href="css/style.css" rel="stylesheet"> 
