Changed theme name from 'plain_white' to 'plain'. Added 'plain' theme file.

--- a/z7/index.html
+++ b/z7/index.html
@@ -34,7 +34,7 @@
 		<select id="theme" name="t">
 			<option value="default" selected="selected">Domyślny</option>
 			<option value="dark">Dark</option>
-			<option value="plain_white">Plain white</option>
+			<option value="plain">Plain white</option>
 			<option value="candy">Candy</option>
 			<option value="formal">Formal</option>
 			<option value="custom">Własny</option>
