Introducing "paper sheet" theme instead of "Candy".

--- a/z7/index.html
+++ b/z7/index.html
@@ -35,7 +35,7 @@
 			<option value="default" selected="selected">Domyślny</option>
 			<option value="dark">Dark</option>
 			<option value="plain">Plain</option>
-			<option value="candy">Candy</option>
+			<option value="paper_sheet">Paper sheet</option>
 			<option value="formal">Formal</option>
 			<option value="custom">Własny</option>
 		</select>
