Introducing "Modern" theme instead of "Formal".

--- a/z7/index.html
+++ b/z7/index.html
@@ -36,7 +36,7 @@
 			<option value="dark">Dark</option>
 			<option value="plain">Plain</option>
 			<option value="paper_sheet">Paper sheet</option>
-			<option value="formal">Formal</option>
+			<option value="modern">Modern</option>
 			<option value="custom">Własny</option>
 		</select>
 	
